2003-04-06    Paul Stoffregen <paul@pjrc.com>

	* src/SDCCpeeph.c: added labelIsReturnOnly test
	* src/mcs51/peeph.def: Peephole 244: replace ljmp to ret with ret

2003-04-05    <johan@balder>

	* src/SDCCcse.c (cseAllBlocks): fixed bug #460088
	* src/SDCCloop.c (DEFSETFUNC): fixed bug #460088
	* src/SDCCopt.c (eBBlockFromiCode): fixed bug #460088
	* src/SDCCast.c: fixed a warning
	* src/SDCCast.h: fixed a warning
	* src/SDCCicode.c (operandFromAst): fixed a warning

2003-04-04    <johan@balder>

	* src/SDCCloop.c (DEFSETFUNC): undid the fix for bug #519584
	* src/SDCCast.c (decorateType): fixed bug #715076
	* src/SDCC.y: fixed bug #702907

2003-04-03    <johan@balder>

	* device/lib/_mulint.c (_muluint): new #pragma LESS_PEDANTIC
	* src/SDCCopt.c (eBBlockFromiCode): new #pragma LESS_PEDANTIC
	* src/SDCCglobl.h (PRAGMA_LESSPEDANTIC): new #pragma LESS_PEDANTIC
	* src/SDCC.lex (doPragma): new #pragma LESS_PEDANTIC
	* src/SDCCmain.c (parseCmdLine): new #pragma LESS_PEDANTIC

2003-04-03  Bernhard Held <bernhard@bernhardheld.de>

	* _decdptr.c: fix return values
	* _gptrget.c: fix return values
	* _gptrgetc.c: fix return values
	* _gptrput.c: fix return values
	* _mulint.c: fix return values
	* as/z80/Makefile: fix 'make -j' problem

2003-04-02  Bernhard Held <bernhard@bernhardheld.de>

	* Makefile.common.in: unused PORT, SCC and SAS removed, fixed docdir
	* configure.in: big cleanup, updated to autoconf 2.5x
	* configure: rebuilt from configure.in
	* sdccconf_in.h: new RETSIGTYPE, and other PATHs
	* sdcc_vc_in.h: reflect changes from sdccconf.h
	* doc/Makefile: fixed a flaw in "make install"

2003-04-02    <johan@balder>

	* src/ds390/gen.c (genCmp): no comments
	* src/mcs51/gen.c (genCmp): no comments
	* src/SDCCopt.c (eBBlockFromiCode): detect missing return values
	* src/SDCCast.c (ast_print): fixed the function type in --dumptree

2003-04-01  Bernhard Held <bernhard@bernhardheld.de>
